# yt-vedio-sum

./: .gitignore  README.md
docs/: get-started.md
src/: .gitignore  pyproject.toml  requirements.txt  yt-vedio-sum  yt_cli.py  yt_diarize.py  yt_transcribe.py  yt_utils.py
tests/: .gitignore  test_transcribe.py
