[project]
name = "yt-vedio-sum"
version = "0.2.0"
description = "YouTube video transcription tool"
requires-python = ">=3.10"
dependencies = [
    "yt-dlp>=2024.8.6",
    "faster-whisper>=1.0.0",
    "torch>=2.0.0",
]

[project.scripts]
yt-vedio-sum = "yt_cli:main"

[tool.setuptools]
py-modules = ["yt_utils", "yt_transcribe", "yt_cli"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"